replace overview page

--- a/Diary/res/layout/diary_edit.xml
+++ b/Diary/res/layout/diary_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:rate="http://schemas.android.com/apk/res/com.diary.goal.setting"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -8,11 +9,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         
-        
-        <TextView 
-            android:id="@+id/main_title_1"
+        <!-- 1 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_1"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_1"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_1"
@@ -23,12 +37,25 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-       	<TextView 
-            android:id="@+id/main_title_2"
+		<!-- 2 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_2"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_2"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
+       
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_2"
 		    android:layout_width="match_parent"
@@ -38,11 +65,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-        <TextView 
-            android:id="@+id/main_title_3"
+		<!-- 3 -->    
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_3"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_3"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_3"
@@ -53,11 +93,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-	
-        <TextView 
-            android:id="@+id/main_title_4"
+	    <!-- 4 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_4"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_4"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_4"
@@ -68,11 +121,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-        <TextView 
-            android:id="@+id/main_title_5"
+		<!-- 5 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_5"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_5"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_5"
@@ -83,11 +149,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-        <TextView 
-            android:id="@+id/main_title_6"
+		<!-- 6 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_6"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_6"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_6"
@@ -98,11 +177,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-        <TextView 
-            android:id="@+id/main_title_7"
+		<!-- 7 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_7"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_7"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_7"
@@ -113,11 +205,24 @@
 		    android:focusable="true"
             android:focusableInTouchMode="true"
             android:minLines="10" /> 
-		    
-        <TextView 
-            android:id="@+id/main_title_8"
+		<!-- 8 -->
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <TextView 
+	            android:id="@+id/main_title_8"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"/>
+	        <com.diary.goal.setting.view.RatingPentagramView
+	                android:id="@+id/star_rating_8"
+	                android:layout_width="0dip"
+	                android:layout_height="50dip"
+	                android:layout_weight="2"
+	                rate:starNum="5" />
+        </LinearLayout>
         
         <com.diary.goal.setting.richtext.RichTextEditView
 		    android:id="@+id/diary_content_8"
