--- a/Diary/res/layout/diary_edit.xml
+++ b/Diary/res/layout/diary_edit.xml
@@ -13,12 +13,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_1"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_1"
@@ -41,12 +44,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_2"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_2"
@@ -69,12 +75,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_3"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_3"
@@ -97,12 +106,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_4"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_4"
@@ -125,12 +137,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_5"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_5"
@@ -153,12 +168,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_6"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_6"
@@ -181,12 +199,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_7"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_7"
@@ -209,12 +230,15 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="5dip"
+            android:paddingTop="5dip">
             
 	        <TextView 
 	            android:id="@+id/main_title_8"
 	            android:layout_width="0dip"
-	            android:layout_height="wrap_content"
+	            android:layout_height="match_parent"
+	            android:gravity="center_vertical"
 	            android:layout_weight="1"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_8"
