--- a/Diary/res/layout/me_fragment_layout.xml
+++ b/Diary/res/layout/me_fragment_layout.xml
@@ -45,6 +45,7 @@
     </LinearLayout>
     	
     <LinearLayout 
+        
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -54,6 +55,7 @@
         android:background="@drawable/move_group_bg"
         >
         <LinearLayout 
+            android:id="@+id/me_fragment_line_one"
             android:layout_width="match_parent"
         	android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -70,6 +72,7 @@
                 android:textColor="#000000"
                 />
             <TextView 
+                android:id="@+id/me_fragment_line_one_value"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
@@ -89,6 +92,7 @@
             android:background="@drawable/item_line_2"
             />
         <LinearLayout 
+            android:id="@+id/me_fragment_line_two"
             android:layout_width="match_parent"
         	android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -105,6 +109,7 @@
                 android:textColor="#000000"
                 />
             <TextView 
+                
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
