--- a/Diary/res/layout/register.xml
+++ b/Diary/res/layout/register.xml
@@ -30,11 +30,10 @@
         android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password_hint"            
+        android:hint="@string/email_hint"            
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
         android:paddingTop="10dip"
-        android:paddingBottom="10dip"
         android:inputType="textEmailAddress"
         android:singleLine="true"
         android:shadowColor="#00000000"
@@ -52,6 +51,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password_hint"            
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
+        android:paddingTop="10dip"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:shadowColor="#00000000"
+        android:background="#00000000"
+        android:textColor="#FF000000"/>
+    
+    <View 
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginTop="10dip"
+        android:background="#FFCCCCCC"></View>
+    
+    <EditText 
+        android:id="@+id/confirm_passwd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/confirm_password_hint"            
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
         android:paddingTop="10dip"
