--- a/Diary/res/layout/me_fragment_layout.xml
+++ b/Diary/res/layout/me_fragment_layout.xml
@@ -54,7 +54,7 @@
                 android:orientation="vertical" >
 
                <TextView
-                   android:id="@+id/me_tamplate"
+                   android:id="@+id/me_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
