--- a/Diary/res/drawable/template_item_bg.xml
+++ b/Diary/res/drawable/template_item_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
 			android:startColor="#ffd7d7d7"
-			android:endColor="#ffc0c0c0"
+			android:endColor="#ffd7d7d7"
 			android:angle="90"/>  
 			 
     <corners android:topLeftRadius="5dp"   
@@ -11,3 +11,4 @@
              android:bottomLeftRadius="5dp"/>  
 
 </shape>
+<!--  android:startColor="#ffc0c0c0" -->
