--- a/Diary/res/layout/template_edit_layout.xml
+++ b/Diary/res/layout/template_edit_layout.xml
@@ -3,15 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
-        <ListView android:layout_width="match_parent"
+        <ExpandableListView android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:id="@+id/template_edit_list"
-	        android:layout_marginTop="10dip"
-	        android:paddingLeft="10dip"
-	        android:paddingRight="10dip"
-	        android:dividerHeight="5dip"
-	        android:divider="@null">
+	        android:id="@+id/template_edit_list">
             
-        </ListView>
+        </ExpandableListView>
 
 </RelativeLayout>
