--- a/Diary/res/layout/template_list_item.xml
+++ b/Diary/res/layout/template_list_item.xml
@@ -30,6 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dip"/>
+        android:layout_marginRight="10dip"
+        android:focusable="false" 
+        android:clickable="true"/>
 
 </RelativeLayout>
