--- a/Diary/res/layout/template_edit_sub_item.xml
+++ b/Diary/res/layout/template_edit_sub_item.xml
@@ -12,4 +12,13 @@
         android:textSize="12sp"
         android:textColor="#FF000000"
         android:text="eeeeeeeee"/>
+     
+     <ImageView          
+         android:id="@+id/edit_sub_title"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentRight="true"
+         android:layout_marginRight="5dip"
+         android:src="@drawable/edit_title"/>
+     
 </RelativeLayout>
