--- a/Diary/res/layout/template_edit_layout.xml
+++ b/Diary/res/layout/template_edit_layout.xml
@@ -5,7 +5,12 @@
     
         <ExpandableListView android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:id="@+id/template_edit_list">
+	        android:id="@+id/template_edit_list"
+	        android:groupIndicator="@null"
+	        android:divider="@null"
+	        android:choiceMode="singleChoice"  
+        	android:scrollbars="none"
+        	android:listSelector="#FFE0E0E0"  >
             
         </ExpandableListView>
 
