--- a/Diary/res/layout/template_edit_prior_item.xml
+++ b/Diary/res/layout/template_edit_prior_item.xml
@@ -7,9 +7,11 @@
         android:id="@+id/template_prior_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:layout_marginLeft="5dip"
-        android:textSize="15sp"
+        android:layout_marginTop="20dip"
+        android:layout_marginLeft="10dip"
+        android:layout_marginBottom="20dip"
+        android:layout_centerVertical="true"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#FF29A0F8"
         android:text="eeeeeeeee"/>
@@ -20,6 +22,8 @@
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
+         android:layout_marginTop="10dip"
          android:layout_marginRight="5dip"
+         android:layout_marginBottom="10dip"
          android:src="@drawable/temp_category_add_selector"/>
 </RelativeLayout>
