--- a/Diary/res/layout/essay_overview_child_item.xml
+++ b/Diary/res/layout/essay_overview_child_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@android:drawable/divider_horizontal_bright" />
 
-    <com.diary.goal.setting.view.CategoryTextView
+    <com.diary.goal.setting.invalid.CategoryTextView
         android:id="@+id/child_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
