--- a/Diary/res/layout/template_list_item.xml
+++ b/Diary/res/layout/template_list_item.xml
@@ -31,6 +31,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dip"
+        android:button="?android:attr/listChoiceIndicatorSingle"
         android:focusable="false" 
         android:clickable="true"/>
 
