--- a/Diary/res/layout/diary_edit.xml
+++ b/Diary/res/layout/diary_edit.xml
@@ -22,12 +22,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_1"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -53,12 +54,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_2"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
        
@@ -84,12 +86,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_3"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -115,12 +118,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_4"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -146,12 +150,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_5"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -177,12 +182,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_6"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -208,12 +214,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_7"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
@@ -239,12 +246,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
-	            android:layout_weight="1"/>
+	            android:layout_weight="2"
+	            android:singleLine="true"/>
 	        <com.diary.goal.setting.view.RatingPentagramView
 	                android:id="@+id/star_rating_8"
 	                android:layout_width="0dip"
-	                android:layout_height="50dip"
-	                android:layout_weight="2"
+	                android:layout_height="40dip"
+	                android:layout_weight="3"
 	                rate:starNum="5" />
         </LinearLayout>
         
