--- a/Diary/res/layout/login.xml
+++ b/Diary/res/layout/login.xml
@@ -45,8 +45,7 @@
             android:shadowColor="#00000000"
             android:background="#00000000"
             android:textColor="#FF000000"
-            android:cursorVisible="true"
-            android:textCursorDrawable="@drawable/cursor_color"/>
+            android:cursorVisible="true"/>
     </LinearLayout>
     
     <LinearLayout
