--- a/NumberLock/res/layout/number_lock_layout.xml
+++ b/NumberLock/res/layout/number_lock_layout.xml
@@ -84,8 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:onClick="doClick"
-            android:text="@string/delete" />
+            android:onClick="doClick" />
     </RelativeLayout>
 
 </RelativeLayout>
