--- a/NumberLock/res/layout/number_lock_layout.xml
+++ b/NumberLock/res/layout/number_lock_layout.xml
@@ -71,7 +71,6 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/ll_pass"
-         android:onClick="doClick"
          android:text="@string/number_forget" />
      <!-- 删除按钮 -->
 
@@ -82,7 +81,6 @@
          android:layout_below="@id/ll_pass"
          android:text="@string/passwd_backwards"
          android:textColor="#FFFFFFFF"
-         android:textStyle="bold"
-         android:onClick="doClick" />
+         android:textStyle="bold" />
 
 </RelativeLayout>
