--- a/Diary/res/layout/me_fragment_layout.xml
+++ b/Diary/res/layout/me_fragment_layout.xml
@@ -135,6 +135,26 @@
                    android:background="@drawable/me_item_selector"
                    android:clickable="true"/>
                
+               <View
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/item_line_2" />
+                
+                <TextView
+                   android:id="@+id/me_export"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="1dp"
+                   android:layout_marginRight="1dp"
+                   android:layout_marginTop="1dp"
+                   android:layout_marginBottom="1dp"
+                   android:padding="10dp"
+                   android:text="@string/me_export"
+                   android:textColor="#FF000000" 
+                   android:drawableRight="@drawable/icon_right"
+                   android:background="@drawable/me_item_selector"
+                   android:clickable="true"/>
+                
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
